<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:backgroundTint="#000000"
    android:orientation="vertical"
    tools:context=".CurrentLocation">

    <TextView
        android:id="@+id/textView3"
        style="@style/textStyleUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:paddingBottom="20dp"
        android:text="@string/choose_location_text" />

    <Button
        android:id="@+id/buttonEntrance"
        style="@style/buttonLocationStyle"
        android:text="@string/main_entrance_button" />

    <Button
        android:id="@+id/mamoulisButton"
        style="@style/buttonLocationStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mamoulis_office_button" />

    <Button
        android:id="@+id/lykasButton"
        style="@style/buttonLocationStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lykas_office_button" />

    <Button
        android:id="@+id/secretariatButton"
        style="@style/buttonLocationStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secretariat_button" />

    <Button
        android:id="@+id/laboratoryButton"
        style="@style/buttonLocationStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/laboratory_button" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/qrCodeButton"
            android:layout_width="137dp"
            android:layout_height="44dp"
            android:backgroundTint="#0D26AF"
            android:inputType="textCapCharacters"
            android:text="@string/qr_code_button"
            app:icon="@android:drawable/ic_menu_camera"
            app:iconGravity="textEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.498" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.appcompat.widget.LinearLayoutCompat>