<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:paddingBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView9"
                style="@style/textStyleUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="40dp"
                android:text="@string/how_it_works_text"/>

            <TextView
                android:id="@+id/textView10"
                style="@style/textStyleDown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guides_for_app"/>

        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/startDemoButton"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_demo_button"/>
</LinearLayout>

